@@ -2,7 +2,6 @@
 package com.hedera.services.bdd.suites.fees;
 
 import static com.google.protobuf.ByteString.copyFromUtf8;
-import static com.hedera.services.bdd.junit.TestTags.MATS;
 import static com.hedera.services.bdd.junit.TestTags.TOKEN;
 import static com.hedera.services.bdd.spec.HapiSpec.customizedHapiTest;
 import static com.hedera.services.bdd.spec.HapiSpec.defaultHapiSpec;
@@ -63,7 +62,7 @@ import static com.hedera.services.bdd.suites.contract.leaky.LeakyContractTestsSu
 import static com.hedera.services.bdd.suites.hip1261.utils.FeesChargingUtils.expectedFeeFromBytesFor;
 import static com.hedera.services.bdd.suites.hip1261.utils.FeesChargingUtils.expectedTokenCreateNftFullFeeUsd;
 import static com.hedera.services.bdd.suites.hip1261.utils.FeesChargingUtils.expectedTokenCreateNftWithCustomFeesFullFeeUsd;
-import static com.hedera.services.bdd.suites.hip1261.utils.FeesChargingUtils.expectedTokenMintNftFullFeeUsd;
+import static com.hedera.services.bdd.suites.hip1261.utils.FeesChargingUtils.expectedTokenNftUpdateFullFeeUsd;
 import static com.hedera.services.bdd.suites.hip1261.utils.FeesChargingUtils.expectedTokenUpdateFullFeeUsd;
 import static com.hedera.services.bdd.suites.hip1261.utils.SimpleFeesScheduleConstantsInUsd.AIRDROPS_FEE_USD;
 import static com.hedera.services.bdd.suites.hip1261.utils.SimpleFeesScheduleConstantsInUsd.NODE_AND_NETWORK_BASE_FEE;
@@ -71,6 +70,7 @@ import static com.hedera.services.bdd.suites.hip1261.utils.SimpleFeesScheduleCon
 import static com.hedera.services.bdd.suites.hip1261.utils.SimpleFeesScheduleConstantsInUsd.TOKEN_ASSOCIATE_BASE_FEE_USD;
 import static com.hedera.services.bdd.suites.hip1261.utils.SimpleFeesScheduleConstantsInUsd.TOKEN_CREATE_BASE_FEE_USD;
 import static com.hedera.services.bdd.suites.hip1261.utils.SimpleFeesScheduleConstantsInUsd.TOKEN_CREATE_WITH_CUSTOM_FEE_USD;
+import static com.hedera.services.bdd.suites.hip1261.utils.SimpleFeesScheduleConstantsInUsd.TOKEN_MINT_NFT_FEE;
 import static com.hedera.services.bdd.suites.hip1261.utils.SimpleFeesScheduleConstantsInUsd.TOKEN_TRANSFER_BASE_FEE_USD;
 import static com.hedera.services.bdd.suites.hip904.TokenAirdropBase.setUpTokensAndAllReceivers;
 import static com.hedera.services.bdd.suites.utils.MiscEETUtils.metadata;
@@ -97,7 +97,6 @@ import org.junit.jupiter.api.Tag;
 
 @Tag(TOKEN)
 public class TokenServiceFeesSuite {
-    private static final double ALLOWED_DIFFERENCE_PERCENTAGE = 0.01;
     private static final String TOKEN_TREASURY = "treasury";
     private static final String NON_FUNGIBLE_TOKEN = "nonFungible";
     private static final String SUPPLY_KEY = "supplyKey";
@@ -144,7 +143,6 @@ public class TokenServiceFeesSuite {
     private static final String OWNER = "owner";
 
     @HapiTest
-    @Tag(MATS)
     @DisplayName("charge association fee for FT correctly")
     final Stream<DynamicTest> chargeAirdropAssociationFeeForFT() {
         var receiver = "receiver";
@@ -182,7 +180,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     @DisplayName("charge association fee for NFT correctly")
     final Stream<DynamicTest> chargeAirdropAssociationFeeForNFT() {
         var receiver = "receiver";
@@ -231,7 +228,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> claimFungibleTokenAirdropBaseFee() {
         var nftSupplyKey = "nftSupplyKey";
         return hapiTest(flattened(
@@ -278,7 +274,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     @DisplayName("cancel airdrop FT happy path")
     final Stream<DynamicTest> cancelAirdropFungibleTokenHappyPath() {
         final var account = "account";
@@ -327,7 +322,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     @DisplayName("cancel airdrop NFT happy path")
     final Stream<DynamicTest> cancelAirdropNftHappyPath() {
         var nftSupplyKey = "nftSupplyKey";
@@ -384,7 +378,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> baseCommonTokenRejectChargedAsExpected() {
         return hapiTest(
                 newKeyNamed(MULTI_KEY),
@@ -424,7 +417,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> baseCreationsHaveExpectedPrices() {
         final var civilian = "NonExemptPayer";
 
@@ -531,7 +523,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> baseTokenOperationIsChargedExpectedFee() {
         final var htsAmount = 2_345L;
         final var targetToken = "immutableToken";
@@ -558,7 +549,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> baseFungibleMintOperationIsChargedExpectedFee() {
         return hapiTest(
                 newKeyNamed(SUPPLY_KEY),
@@ -577,7 +567,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> baseNftMintOperationIsChargedExpectedFee() {
         final var standard100ByteMetadata = ByteString.copyFromUtf8(
                 "0123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789");
@@ -600,7 +589,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> nftMintsScaleLinearlyBasedOnNumberOfSerialNumbers() {
         final var expectedFee = 10 * EXPECTED_NFT_MINT_PRICE_USD;
         final var standard100ByteMetadata = ByteString.copyFromUtf8(
@@ -637,13 +625,12 @@ public class TokenServiceFeesSuite {
                         safeValidateChargedUsdWithin(
                                 BASE_TXN,
                                 expectedFee,
-                                ALLOWED_DIFFERENCE_PERCENTAGE,
-                                expectedTokenMintNftFullFeeUsd(0, 10) + expectedFeeFromBytesFor(spec, opLog, BASE_TXN),
+                                1,
+                                10 * TOKEN_MINT_NFT_FEE + expectedFeeFromBytesFor(spec, opLog, BASE_TXN),
                                 0.1))));
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> baseNftBurnOperationIsChargedExpectedFee() {
         return hapiTest(
                 newKeyNamed(SUPPLY_KEY),
@@ -664,7 +651,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> baseGrantRevokeKycChargedAsExpected() {
         return hapiTest(
                 newKeyNamed(MULTI_KEY),
@@ -691,7 +677,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> baseNftFreezeUnfreezeChargedAsExpected() {
         return hapiTest(
                 newKeyNamed(TREASURE_KEY),
@@ -727,7 +712,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> baseCommonFreezeUnfreezeChargedAsExpected() {
         return hapiTest(
                 newKeyNamed(TREASURE_KEY),
@@ -761,7 +745,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> basePauseAndUnpauseHaveExpectedPrices() {
         final var expectedBaseFee = 0.001;
         final var token = "token";
@@ -783,7 +766,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> baseNftWipeOperationIsChargedExpectedFee() {
         return defaultHapiSpec("BaseUniqueWipeOperationIsChargedExpectedFee")
                 .given(
@@ -810,7 +792,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> updateTokenChargedAsExpected() {
         final var expectedUpdatePriceUsd = 0.001;
 
@@ -827,7 +808,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> updateNftChargedAsExpected() {
         final var expectedNftUpdatePriceUsd = 0.001;
         final var nftUpdateTxn = "nftUpdateTxn";
@@ -864,7 +844,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> deleteTokenChargedAsExpected() {
         final var expectedDeletePriceUsd = 0.001;
 
@@ -877,7 +856,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     @DisplayName("FT happy path")
     final Stream<DynamicTest> tokenAssociateDissociateChargedAsExpected() {
         final var account = "account";
@@ -898,7 +876,6 @@ public class TokenServiceFeesSuite {
     }
 
     @HapiTest
-    @Tag(MATS)
     final Stream<DynamicTest> updateMultipleNftsFeeChargedAsExpected() {
         final var expectedNftUpdatePriceUsd = 0.005;
         final var nftUpdateTxn = "nftUpdateTxn";
@@ -933,7 +910,11 @@ public class TokenServiceFeesSuite {
                         .fee(10 * ONE_HBAR)
                         .via(nftUpdateTxn),
                 safeValidateChargedUsdWithin(
-                        nftUpdateTxn, expectedNftUpdatePriceUsd, 0.01, expectedTokenUpdateFullFeeUsd(2, 0, 5), 0.01));
+                        nftUpdateTxn,
+                        expectedNftUpdatePriceUsd,
+                        0.01,
+                        expectedTokenNftUpdateFullFeeUsd(2, 5, 0),
+                        0.01));
     }
 
     @HapiTest
@@ -1055,7 +1036,7 @@ public class TokenServiceFeesSuite {
 
         @HapiTest
         final Stream<DynamicTest> updateOneNftTokenWithoutCustomFees() {
-            return updateBulkNftTokensAndValidateFees(10, Arrays.asList(1L));
+            return updateBulkNftTokensAndValidateFees(10, List.of(1L));
         }
 
         @HapiTest
